extends Panel
class_name ZooShopItemSlot

@onready var icon: TextureRect = $HBoxContainer/Icon
@onready var name_label: Label = $HBoxContainer/VBoxContainer/NameLabel
@onready var price_label: Label = $HBoxContainer/VBoxContainer/PriceLabel
@onready var action_button: TextureButton = $HBoxContainer/VBoxContainer2/ActionButton
@onready var action_button_label: Label = $HBoxContainer/VBoxContainer2/ActionButton/ActionButtonLabel
@onready var amount_label: Label = $HBoxContainer/VBoxContainer2/AmountLabel
@onready var Player: CharacterBody2D = get_tree().root.get_node("Game/Player")

var shop_data: Resource   # ItemData –∞–±–æ CaseData
var mode: ShopUI.Mode
var amount: int = 1       # –∫—ñ–ª—å–∫—ñ—Å—Ç—å –ø—Ä–µ–¥–º–µ—Ç—ñ–≤ —É SELL
var stock: int = 0        # –∫—ñ–ª—å–∫—ñ—Å—Ç—å –¥–æ—Å—Ç—É–ø–Ω–∏—Ö —É BUY

func set_item(data: Resource, new_mode: ShopUI.Mode, amount := 1, stock := 0):
	await self.ready
	shop_data = data
	mode = new_mode
	self.amount = amount
	self.stock = stock

	# –±–∞–∑–æ–≤—ñ –¥–∞–Ω—ñ
	if shop_data is ItemData:
		icon.texture = shop_data.icon
		name_label.text = shop_data.item_name
		name_label.modulate = InventoryManager.get_rarity_color(shop_data.rarity)
		price_label.text = "Price: " + str(shop_data.price) + " gold"

	elif shop_data is CaseData:
		icon.texture = shop_data.icon
		name_label.text = shop_data.case_name
		name_label.modulate = InventoryManager.get_rarity_color(shop_data.rarity)
		price_label.text = "Price: " + str(shop_data.price) + " gold"
		
	elif shop_data is PetData:
		icon.texture = shop_data.icon
		name_label.text = shop_data.pet_name
		name_label.modulate = InventoryManager.get_rarity_color(shop_data.rarity)
		price_label.text = "Price: " + str(shop_data.price) + " gold"


	# –∫–Ω–æ–ø–∫–∞ Buy/Sell + –∫—ñ–ª—å–∫—ñ—Å—Ç—å
	if mode == ShopUI.Mode.BUY:
		action_button_label.text = "Buy"
		amount_label.text = "Stock: " + str(stock)   # üîπ –∑–∞–≤–∂–¥–∏ –ø–æ–∫–∞–∑—É—î–º–æ
	else:
		action_button_label.text = "Sell"
		if amount > 1:
			amount_label.text = "x" + str(amount)
		else:
			amount_label.text = " "       # üîπ –∑–∞–≤–∂–¥–∏ –ø–æ–∫–∞–∑—É—î–º–æ

	action_button.pressed.connect(on_action_button_pressed)

func on_action_button_pressed():
	if mode == ZooShopUI.Mode.BUY:
		var price = shop_data.price if shop_data else 0
		if Player.gold >= price and stock > 0:
			Player.gold -= price

			if shop_data is ItemData:
				var success = InventoryManager.add_item(shop_data, 1)
				if success:
					stock -= 1
					amount_label.text = "Stock: " + str(stock)
					print("‚úÖ –ö—É–ø–ª–µ–Ω–æ: ", shop_data.item_name)
				else:
					print("‚ùå –ù–µ–º–∞—î –º—ñ—Å—Ü—è –≤ —ñ–Ω–≤–µ–Ω—Ç–∞—Ä—ñ!")

			elif shop_data is CaseData:
				var reward: Resource = shop_data.open_case()
				LoadingScreen.open_case(reward.icon, "case_pet_shiny")
				if reward is ItemData:
					InventoryManager.add_item(reward, 1)
					print("üéÅ –í–∏–ø–∞–≤ –ø—Ä–µ–¥–º–µ—Ç: ", reward.item_name)
				elif reward is PetData:
					InventoryManager.pet_inventory.add_pet(reward)
					print("üéÅ –í–∏–ø–∞–≤ –ø–µ—Ç: ", reward.pet_name)
				else:
					print("‚ùå –ö–µ–π—Å –≤—ñ–¥–∫—Ä–∏—Ç–æ, –∞–ª–µ –Ω–∞–≥–æ—Ä–æ–¥–∞ –Ω–µ –≤–∏–∑–Ω–∞—á–µ–Ω–∞")
				stock -= 1
				amount_label.text = "Stock: " + str(stock)

		else:
			if stock <= 0:
				print("‚ùå –¶–µ–π —Ç–æ–≤–∞—Ä –∑–∞–∫—ñ–Ω—á–∏–≤—Å—è!")
			else:
				print("‚ùå –ù–µ–¥–æ—Å—Ç–∞—Ç–Ω—å–æ –∑–æ–ª–æ—Ç–∞!")

	elif mode == ZooShopUI.Mode.SELL:
		if shop_data is ItemData:
			var amount = InventoryManager.get_item_count(shop_data)
			if amount > 0:
				Player.gold += shop_data.price
				InventoryManager.remove_item(shop_data, 1)
				print("‚úÖ –ü—Ä–æ–¥–∞–Ω–æ: ", shop_data.item_name)
				# –û–Ω–æ–≤–∏—Ç–∏ –º–∞–≥–∞–∑–∏–Ω –ø—ñ—Å–ª—è –ø—Ä–æ–¥–∞–∂—É
				var shop_ui = find_parent_shop_ui()
				if shop_ui != null:
					shop_ui.refresh_item_list()
		else:
			print("‚ùå –ö–µ–π—Å –Ω–µ –º–æ–∂–Ω–∞ –ø—Ä–æ–¥–∞—Ç–∏!")
		
		if shop_data is PetData:
			var price = shop_data.sell_price if shop_data.sell_price > 0 else shop_data.price
			if InventoryManager.pet_inventory.remove_pet(shop_data):
				Player.gold += price
				print("‚úÖ –ü—Ä–æ–¥–∞–Ω–æ –ø–µ—Ç–∞: ", shop_data.pet_name)
				var shop_ui = find_parent_shop_ui()
				if shop_ui != null:
					shop_ui.refresh_item_list()
		else:
			print("‚ùå –ü—Ä–æ–¥–∞–≤–∞—Ç–∏ —Ç—É—Ç –º–æ–∂–Ω–∞ –ª–∏—à–µ –ø–µ—Ç–æ–≤")


func find_parent_shop_ui() -> Node:
	var current = get_parent()
	while current != null:
		if current is ZooShopUI:
			return current
		current = current.get_parent()
	return null
